ingresses/ingress-kiali.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - host: "kiali.192.168.1.99.nip.io"        
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
