ingresses/ingress-prom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - host: "prom.192.168.1.99.nip.io"        
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
