ingresses/ingress-tracing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracing
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - host: "tracing.192.168.1.99.nip.io"        
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tracing
            port:
              number: 80
